--- a/src/Views/admin/users/index.twig
+++ b/src/Views/admin/users/index.twig
@@ -1,6 +1,4 @@
-{# src/Views/admin/users/index.twig #}
-{% extends 'layouts/admin.twig' %}
-
+{% extends 'layouts/main.twig' %}
 {% block title %}Usuários{% endblock %}
 
 {% block content %}
