--- a/src/Views/admin/users/view.twig
+++ b/src/Views/admin/users/view.twig
@@ -1,6 +1,4 @@
-{# src/Views/admin/users/view.twig #}
-{% extends 'layouts/admin.twig' %}
-
+{% extends 'layouts/main.twig' %}
 {% block title %}Detalhes do Usuário{% endblock %}
 
 {% block content %}
