--- a/src/Views/admin/feedbacks/index.twig
+++ b/src/Views/admin/feedbacks/index.twig
@@ -1,4 +1,4 @@
-{% extends 'layouts/admin.twig' %}
+{% extends 'layouts/main.twig' %}
 
 {% block styles %}
     <link rel="stylesheet" href="/assets/css/admin/feedbacks.css">
