--- a/src/Views/admin/users/create.twig
+++ b/src/Views/admin/users/create.twig
@@ -1,6 +1,4 @@
-{# src/Views/admin/users/create.twig #}
-{% extends 'layouts/admin.twig' %}
-
+{% extends 'layouts/main.twig' %}
 
 {% block styles %}
     <link rel="stylesheet" href="/assets/css/admin/users.css">
