--- a/src/Views/auth/reset.twig
+++ b/src/Views/auth/reset.twig
@@ -23,7 +23,7 @@
                 <p><a href="/login">Clique aqui para fazer login</a></p>
             </div>
         {% else %}
-            <form action="/reset" method="POST" class="auth-form">
+            <form action="/reset-password" method="POST" class="auth-form">
                 <div class="form-group">
                     <label for="email">E-mail</label>
                     <input type="email" id="email" name="email" required>
