sistema de turmas 70% completo, e um layout bem bonito no home...

--- a/src/Views/dashboard/professor.twig
+++ b/src/Views/dashboard/professor.twig
@@ -21,7 +21,7 @@
             <div class="card">
                 <h3>Solicitações Pendentes</h3>
                 <p class="number">{{ dashboard.solicitacoesPendentes }}</p>
-                <a href="#" class="btn">Gerenciar</a>
+                <a href="/classes/professor/requests" class="btn">Gerenciar</a>
             </div>
 
             <div class="card">
